[workspace]
members = [
    "packages/*",
    "cesr",
    "keri-demo",
]
resolver = "2"

[workspace.package]
authors = [
    "Stănilă Ioan <ioanstanilais@gmail.com>",
]
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.75"
cesrox = "0.1.4"
ed25519-dalek = { version = "2.0.0", features = ["digest", "rand_core"] }
keri = "0.8.2"
rand = "0.8.5"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
