[package]
name = "cesr"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../packages/util" }

cesrox.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
tracing.workspace = true
